@@ -669,7 +669,7 @@ Examples:
     (eql #\a (car "aaa")) ; ==> t
     (eql -0.0 0.0) ; ==> nil
 
-### null, atom, consp, listp, symbolp, stringp, characterp, functionp
+### null, atom, consp, listp, symbolp, stringp, simple-string-p, characterp, functionp
 
 ### numberp, integerp, floatp
 
@@ -677,7 +677,7 @@ Examples:
 - `integerp` returns `t` for Murmel's integral number type (which internally is a `Long`).
 - `floatp` returns `t` for Murmel's decimal number type (which internally is a `Double`).
 
-### vector, vectorp, svref, svlength
+### vector, vectorp, simple-vector-p, svref, svlength
 
 Vectors are on-dimensional arrays (which internally are Object[]).
 
