@@ -10,8 +10,9 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
    Old behaviour can be restored by the commandline flag '--XX-oldlambda' (interpreter only).
 
  * added the special operators catch, throw and unwind-protect
- * added vector, vectorp, svref and svlength
  * added functionp
+ * added vector, vectorp, simple-vector-p, svref and svlength
+ * added simple-string-p
 
  * fixed backquote expansion:
    e.g. `(a ,nil) was eval'd to (a); correct expansion is (a nil)
